# tracing_sim

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs  notes.txt
.cargo/: config.toml
.github/workflows/: rust.yml
apps/: Cargo.toml
apps/bookinfo/: gateway.rs  main.rs
example_envs/: Cargo.toml
example_envs/bookinfo/: .gateway.rs.swp  bookinfo.rs  gateway.rs  leafnode.rs  lib.rs  main.rs  productpage.rs  reviews.rs
example_envs/tests/: bookinfo_test.rs
filter_lib/: Cargo.toml  graph_utils.rs
filter_lib/src/: example_filter.rs
libs/: .gitignore  .gitmodules
libs/aggregation_example/: Cargo.toml
libs/aggregation_example/src/: .avg.rs.swp  avg.rs
libs/filter_example/: Cargo.toml
libs/filter_example/src/: example_filter.rs  graph_utils.rs  lib.rs  types.rs
libs/filter_lib/: Cargo.toml
libs/filter_lib/src/: example_filter.rs  lib.rs
libs/graph_utils/: Cargo.toml
libs/graph_utils/src/: graph_utils.rs  iso.rs  lib.rs  utils.rs
libs/petgraph/: Cargo.toml
libs/petgraph/src/: isomorphism.rs
libs/petgraph/src/algo/: mod.rs
libs/petgraph/tests/: iso.rs
libs/rpc_lib/: Cargo.toml
libs/rpc_lib/src/: rpc.rs
libs/rust_lib/src/: filter.rs
libs/sim/: Cargo.toml  edge.rs  filter_types.rs  lib.rs  load_lib.rs  node.rs  plugin_wrapper.rs  sim_element.rs  simulator.rs  storage.rs
libs/type_lib/: Cargo.toml
libs/type_lib/src/: filter_types.rs  lib.rs
my_filter/: Cargo.toml  my_filter_types.rs
my_filter/src/: lib.rs  my_filter.rs
plugins/: codelet.rs  compiled_filter.rs  compiled_sample.rs  filter_template.rs  rpc.rs  sample.rs  sample2.rs  sample_filter.rs  sink.rs
rpc_lib/: Cargo.toml
sim/: Cargo.toml
sim/src/: channel.rs  codelet.rs  edge.rs  filter_types.rs  lib.rs  link.rs  main.rs  node.rs  plugin_wrapper.rs  reviews.rs  rpc.rs  sim_element.rs  simulator.rs  storage.rs  traffic_generator.rs
sim/src/bookinfo/: details.rs  gateway.rs  leafnode.rs  mod.rs  productpage.rs  reviews.rs
src/: channel.rs  codelet.rs  filter.rs  filter_types.rs  graph_utils.rs  libloading_sample.rs  link.rs  main.rs  petgraph_sample.rs  plugin.rs  plugin_sample.rs  plugin_wrapper.rs  rpc.rs  sample_plugin.rs  sim_element.rs  simulator.rs  traffic_generator.rs
test_files/: test.dylib
tests/: bookinfo_test.rs
