[workspace]
members = [
    "libs/filter_example",
    "libs/aggregation_example",
    "libs/rpc_lib",                                                             
    "libs/utils",                                                         
    "libs/sim",                                                                 
    "example_envs", 
]

