[package]
name = "tracing_sim"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.5"
queues = "1.0.2"
rand="0.3.0"
filter_lib = { path = "../libs/filter_lib" }
rpc_lib = { path = "../libs/rpc_lib" }

