[package]
name = "sim"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sim"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
libc = "*"
libloading = "0.6.5"
queues = "1.0.2"
rand="0.7.0"
clap = "~2.27.0"
rpc_lib = { path = "../libs/rpc_lib" }
petgraph = { path = "../libs/petgraph" }

