[package]
name = "aggregation_example"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
indexmap = { version = "1.6.1", features = ["serde-1"] } 
serde_yaml = "0.8"
rpc_lib = { path = "../rpc_lib" }
log = "*"
log4rs = "*"
serde = { version = "1.0", features = ["derive"] }
petgraph = {version =  "0.*", features = ["serde-1"] }
utils = { path = "../../../tracing_compiler/libs/utils" } 
