[package]
name = "sim"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sim"
crate-type = ["lib"]
path = "lib.rs"

[dependencies]
log = "*"
libc = "*"
libloading = "0.6.5"
queues = "1.0.2"
rand="0.7.0"
filter_example = { path = "../filter_example" }
rpc_lib = { path = "../rpc_lib" }
petgraph = { path = "../petgraph" }
indexmap = { version = "1.6.1", features = ["serde-1"] }  
csv = "1.1"
